# Immortal_comfyUI

./: Actions.py  Events.py  ImmortalAgent.py  ImmortalEntity.py  ImmortalPlayer.py  MovieMakerUtils.py  OllamaCli.py  Schema.json  TTSUtils.py  Utils.py  Wav2lipCli.py  __init__.py  config.py  inference_gfpgan.py  keywords.py  pyproject.toml
sh/: voiceConvertion.cmd  wav2lipsh.bat
