[project]
name = "immortal_comfyui"
description = "NODES:ImNewNode, ImAppendNode, MergeNode, SetProperties, SaveToDirectory, batchNodes, redirectToNode, SetEvent, ..."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/JichaoLiang/Immortal_comfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Immortal_comfyUI"
Icon = ""
